Fixed mysterious whitespace on right-hand side of window and content background was unable to stretch to bottom of window.

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 #sidebar {
-    position: sticky;
+    position: fixed;
     top: 0;
     
     min-width: 250px;
@@ -19,8 +19,6 @@ html, body {
     height: 100vh;
     
     background-color: teal;
-    
-    position: fixed;
     
 }
 
@@ -37,12 +35,12 @@ main {
     color: khaki;
     background-color: #404040;
     
-    left: 0;
-    right: 0;
+    height: 100vh;
     
+    overflow-x: hidden;
     overflow-y: scroll;
     position: absolute;
     
     margin-left: 250px;
-    padding-left: 0;
+    padding: 0;
 }
